style.css
/*@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap');*/
/* @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');

:root {
  --page-background-color: #f4f4f4;
  --project-background-color: white;
  --body-text-color: black;
  --project-border: 2px solid #222;
  --project-border-radius: 15px;
  --project-box-shadow: 8px 8px lightgray;
  --image-stroke-color: rgb(51, 51, 51);
  --image-fill-color: rgb(51, 51, 51);
  --anim-transition: transform 0.15s ease-in-out;
  --bg-text-color: #dedede;
  --scale-amount: 1.07;
  --anim-transform: scale(var(--scale-amount));
  --text-shadow: #aaa 5px 5px 10px;
  --link-color: blue;
  --visited-color: magenta;
  --sk-text-color: var(--body-text-color);
  --sk-background-color: var(--project-background-color);
  --light-display: inline;
  --dark-display: none;
  --body-margin: 5vmin;
}

/*
.light-img {
  display: unset;
}

.dark-img {
  display: none;
} */



@media (prefers-color-scheme: dark) {
  :root {
    --project-background-color: rgb(45, 45, 45);
    --page-background-color: rgb(55, 55, 55);
    --body-text-color: white;
    --project-border: 2px solid #ddd;
    --project-box-shadow: 8px 8px rgb(30, 30, 30);
    --image-stroke-color: rgb(240, 240, 240);
    --image-fill-color: rgb(240, 240, 240);
    --bg-text-color: rgb(75, 75, 75);
    --text-shadow: #000 5px 5px 10px;
    --link-color: hsl(180, 70%, 70%);
    --visited-color: hsl(300, 70%, 70%);
    --sk-text-color: var(--body-text-color);
    --sk-background-color: var(--project-background-color);
    --light-display: none;
    --dark-display: inline;
  }

  /* .light-img {
    display: none;

  }

  .dark-img {
    display: unset;
  } */
}

body[data-mode="light"] {
  --page-background-color: #f4f4f4;
  --project-background-color: white;
  --body-text-color: black;
  --project-border: 2px solid #222;
  --project-border-radius: 15px;
  --project-box-shadow: 8px 8px lightgray;
  --image-stroke-color: rgb(51, 51, 51);
  --image-fill-color: rgb(51, 51, 51);
  --bg-text-color: #dedede;
  --text-shadow: #aaa 5px 5px 10px;
  --link-color: blue;
  --visited-color: magenta;
  --sk-text-color: var(--body-text-color);
  --sk-background-color: var(--project-background-color);
  --light-display: inline;
  --dark-display: none;
}

body[data-mode="dark"] {
  --project-background-color: rgb(45, 45, 45);
  --page-background-color: rgb(55, 55, 55);
  --body-text-color: white;
  --project-border: 2px solid #ddd;
  --project-box-shadow: 8px 8px rgb(30, 30, 30);
  --image-stroke-color: rgb(240, 240, 240);
  --image-fill-color: rgb(240, 240, 240);
  --bg-text-color: rgb(75, 75, 75);
  --text-shadow: #000 5px 5px 10px;
  --link-color: hsl(180, 70%, 70%);
  --visited-color: hsl(300, 70%, 70%);
  --sk-text-color: var(--body-text-color);
  --sk-background-color: var(--project-background-color);
  --light-display: none;
  --dark-display: inline;
}

body {
  --transition-time: 220ms;
  --transition-func: linear;
  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, "FreeSans", "TeX Gyre Heroes", Arial, sans-serif;
  text-align: center;
  color: var(--body-text-color);
  padding-bottom: 6vh;
  margin: var(--body-margin);
  font-size: 2vmin;
  font-variant-ligatures: none;
  background-color: var(--page-background-color);
  --transition-var: color var(--transition-time) var(--transition-func),
    background-color calc(var(--transition-time) + 90ms) var(--transition-func),
    box-shadow var(--transition-time) var(--transition-func);
  /* transition: none */
  /*var(--transition-var);*/
}

#main {
  width: 90vw;
  transform: translateX(calc(5vw - var(--body-margin)));
}

a:link {
  color: var(--link-color);
}

a:visited {
  color: var(--visited-color);
}

@supports (display: grid) {
  svg.logo {
    width: 50%;
    height: 50%;
  }
}

@media(max-height: 800px) {
  body {
    font-size: 12pt;
  }
}

.topper {
  display: grid;
  grid-template-columns: 1fr 5fr 1fr;
  column-gap: 1em;
  padding: 1em;
}

.topper>a {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  align-content: center;
  justify-items: center;
  /* padding: 1em; */
}

.top-content {
  text-shadow: var(--text-shadow);
  padding: 1em;
}

.logo {
  transition: var(--anim-transition);
}

.logo:hover {
  transform: var(--anim-transform);
}

.logog {
  fill: var(--image-fill-color);
  /* stroke: var(--image-stroke-color); */
}

.content-featured {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
}

@media(max-width: 1000px) {
  body {
    font-size: 2vmax;
  }

  .logo {
    margin-left: 5vw;
    margin-right: 5vw;
  }

  .content-featured {
    display: grid;
    grid-template-columns: minmax(300px, 1fr);
  }
}

@media (max-width:1100px) {
  .topper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: max-content 90px;
    row-gap: 1em;
  }

  .top-content {
    grid-column: 1/3;
    column-span: 2;
    grid-row: 1;
  }

  #top-left {
    grid-row: 2;
  }

  #top-right {
    grid-row: 2;
  }

  @supports(display: grid) {
    svg.logo {
      width: 100%;
      height: 100%;
    }
  }
}


.subtitle {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 1em;
  color: gray;
}

.blerb {
  font-size: 1.2em;
  margin-bottom: 2vh;
}

h1 {
  text-align: center;
  font-weight: bolder;
  font-size: 3.5em;
  margin-bottom: 0;
  margin-top: 0;
}

.project {

  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: space-evenly;
  justify-content: space-evenly;
  /* margin: 0.75vmax; */
  margin: 14px;
  border: var(--project-border);
  box-shadow: var(--project-box-shadow);
  border-radius: var(--project-border-radius);
  background-color: var(--project-background-color);
  transition: var(--anim-transition);
  padding: 0.7em;
}

.project:hover {
  --scale-amount: 1.2;

  transform: var(--anim-transform);

}

img {
  width: auto;
  max-width: 90%;
  height: 200px;
}

.section-heading {
  margin-top: 5vh;

}

.content-featured a:link {
  color: var(--body-text-color);
  text-decoration: none;
}

.content-featured a:visited {
  color: var(--body-text-color);
  text-decoration: none;
}


@media (prefers-reduced-motion: reduce) {
  :root {
    --anim-transition: none;
    --anim-transform: none;
  }

  .logo:hover {
    transform: none;
  }
}

.content-other {
  text-align: left;
}


.footer {
  margin-top: 5em;
  text-align: center;
  text-shadow: var(--text-shadow);
  font-size: 1.1em;
  color: var(--body-text-color);
}

.small {
  font-size: 0.9em;
  margin-top: 1em;
  margin-bottom: 3em;

}

.noscript {
  font-size: 14pt;
  color: var(--body-text-color);
}

